[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/hud.tres" type="DynamicFont" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_left = -0.00190355
anchor_top = -0.00412435
anchor_right = -0.00190355
anchor_bottom = -0.00412435
margin_left = 479.475
margin_top = 34.4746
margin_right = 901.475
margin_bottom = 561.475
color = Color( 0.972549, 0.882353, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 615.703
margin_top = 80.3944
margin_right = 921.703
margin_bottom = 154.394
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.000951679
anchor_right = 0.000951679
margin_left = 531.76
margin_top = 200.812
margin_right = 837.76
margin_bottom = 274.812
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "DOCTOR WHOHAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 543.117
margin_top = 333.135
margin_right = 849.117
margin_bottom = 413.135
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.933333, 0.0745098, 0.0745098, 1 )
custom_colors/font_color = Color( 0.933333, 0.0745098, 0.0745098, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreMsg" type="Label" parent="."]
anchor_left = -0.000951773
anchor_right = -0.000951773
margin_left = 503.966
margin_top = 81.0812
margin_right = 809.966
margin_bottom = 155.081
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SCORE:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
